Fixed:
* SVG's exceeding thumbnail size in profile page UI.
* Thumbnails on left edge on profile page wont be cutoff on the left anymore.
* Thumbnail vertical spacing on profile page.

--- a/imgee/static/css/app.css
+++ b/imgee/static/css/app.css
@@ -603,6 +603,7 @@ ul.list .list2 {
 /*grid view */
 ul.grid {
   list-style: none;
+  padding-left: 5px;
 }
 ul.grid section.top {
   display: none;
@@ -611,7 +612,7 @@ ul.grid li {
   position: relative;
   float: left;
   margin-right: 15px;
-  margin-top: 5px;
+  margin-top: 10px;
   border-bottom: 0px;
   padding-bottom: 0px;
   padding-top: 0px;
@@ -628,6 +629,8 @@ ul.grid li .image-thumb:hover {
 }
 ul.grid li .image-thumb > img {
   border: 5px solid white;
+  max-width: 75px;
+  max-height: 75px;
 }
 ul.grid li section.left {
   position: relative;
