--- a/imgee/static/sass/layout/modules/_gallery.sass
+++ b/imgee/static/sass/layout/modules/_gallery.sass
@@ -104,6 +104,7 @@ ul.list
 /** grid view **/
 ul.grid
   list-style: none
+  padding-left: 5px
   section.top
     display: none
   
@@ -111,7 +112,7 @@ ul.grid
     position: relative
     float: left
     margin-right: 15px
-    margin-top: 5px
+    margin-top: 10px
     border-bottom: 0px
     padding-bottom: 0px
     padding-top: 0px
@@ -126,6 +127,8 @@ ul.grid
         opacity: 1
     .image-thumb > img
       border: 5px solid white
+      max-width: 75px
+      max-height: 75px
 
     section.left
       position: relative
